@@ -137,7 +137,7 @@ public class GunFu extends BasePower {
         }
 
         public PowerResult<Float> run(Player player, Projectile projectile, float force) {
-            List<LivingEntity> entities = getLivingEntitiesInCone(getNearestLivingEntities(getPower(), player.getEyeLocation(), player, getDistance(), 0), player.getLocation().toVector(), getViewAngle(), player.getLocation().getDirection()).stream().filter(player::hasLineOfSight).collect(Collectors.toList());
+            List<LivingEntity> entities = getLivingEntitiesInCone(getNearestLivingEntities(getPower(), player.getEyeLocation(), player, getDistance(), 0), player.getLocation().toVector(), getViewAngle(), player.getLocation().getDirection()).stream().filter(player::hasLineOfSight).toList();
             projectile.setVelocity(projectile.getVelocity().multiply(getInitVelFactor()));
             if (!entities.isEmpty()) {
                 LivingEntity target = entities.get(0);
@@ -168,7 +168,6 @@ public class GunFu extends BasePower {
         }
 
         @Override
-        @SuppressWarnings("deprecation")
         public PowerResult<Void> projectileLaunch(Player player, ItemStack stack, ProjectileLaunchEvent event) {
             if (!checkCooldown(getPower(), player, getCooldown(), true, true)) return PowerResult.cd();
             if (!getItem().consumeDurability(stack, getCost())) return PowerResult.cost();
